# funnel-researcher

./: .gitignore  README.md  pyproject.toml
examples/api_activation/: README.md  diagnosis.md  iteration.md
src/funnel_researcher/: __init__.py  __main__.py  applier.py  comparison.py  delta.py  hypothesis_agent.py  iterator.py  loaders.py  product_reader.py  prompt_assembler.py
src/funnel_researcher/prompts/: hypothesis_system.md  hypothesis_user.md
tests/: test_applier.py  test_cli_apply.py  test_cli_iterate.py  test_comparison.py  test_delta.py  test_hypothesis_agent.py  test_iterator.py  test_loaders.py  test_product_reader.py  test_prompt_assembler.py
