[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "funnel-researcher"
version = "0.1.0"
description = "Structured failure-diagnosis for developer-API activation funnels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
funnel-researcher = "funnel_researcher.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
funnel_researcher = ["prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
